--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	<meta name="keywords" content="favelet, bookmarklet, virtual keyboard, fonts, dictionary, transliteration, old church slavonic," />
+	<meta name="description" content="" />
+	<meta name="author" content="Martin Podolak" />
+	<title>Bookmarklets for Slavonic Studies</title>
 <link rel="stylesheet" href="https://slavonic.github.io/css/fonts.css" type="text/css">
 <style>
 .ksl {
@@ -10,6 +18,9 @@ table {
 	width:100%;
 }
 </style>
+</head>
+<body>
+
 <div style="font-family:sans-serif;">
 <h1>Bookmarklets for Slavonic Studies</h1>
 <div style="float:right;margin:5px;border:2px solid black;max-width:33%;">
@@ -99,3 +110,5 @@ table {
 <p style="text-align:right;">Author: <a href="https://podolak.net" target="_blank">Martin Podolak</a></p>
 <br />
 </div>
+</body>
+</html>
