--- a/index.html
+++ b/index.html
@@ -1,51 +1,126 @@
 <!DOCTYPE html>
-<html>
+<html lang="de-de">  <!-- Anpassungen -->
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<meta name="keywords" content="favelet, bookmarklet, virtual keyboard, fonts, dictionary, transliteration, old church slavonic," />
-	<meta name="description" content="" />
-	<meta name="author" content="Martin Podolak" />
 	<title>Bookmarklets for Slavonic Studies</title>
-<link rel="stylesheet" href="https://slavonic.github.io/css/fonts.css" type="text/css">
-<style>
-.ksl {
-	font-family: 'Monomakh Unicode';
-}
-table, tr, td {
+	<meta name="keywords" content="favelet, bookmarklet, virtual keyboard, fonts, dictionary, transliteration, old church slavonic" />  <!-- Anpassungen -->
+	<meta name="author" content="Podolak, Martin" />
+	<meta name="citation_author" content="Podolak, Martin" />
+	<meta name="dc:type" content="computerProgram" />
+	<meta name="dc:rights" content="MIT" />
+	<meta name="robots" content="index, follow" />
+	<meta name="x-ua-compatible" content="IE=edge,chrome=1" />
+	<meta name="description" content="The bookmarklets contain a selection of high quality monolingual and bilingual online dictionaries and corpora for Old Church Slavonic and provide several Old Cyrillic font operation functions" />
+	<meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
+	<meta property="og:image" content="https://pod-o-mart.github.io/images/opengraph.png" />
+	<meta property="og:image:width" content="158" />
+	<meta property="og:image:height" content="158" />
+	<meta property="og:image:type" content="image/png" />
+	<link rel="image_src" href="https://pod-o-mart.github.io/images/opengraph.png" />
+	<link rel="shortcut icon" href="https://pod-o-mart.github.io/images/favicon.ico" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.5/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://pod-o-mart.github.io/css/template.css" rel="stylesheet"/>
+	<link rel="stylesheet" href="https://pod-o-mart.github.io/css/user.css" rel="stylesheet"/>
+	<script src="https://cdn.jsdelivr.net/gh/jquery/jquery@1.12.4/dist/jquery.min.js" type="text/javascript"></script>
+	<script src="https://cdn.jsdelivr.net/gh/WickyNilliams/headroom.js@0.7.0/dist/headroom.js" type="text/javascript"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.5/dist/js/bootstrap.min.js"></script>
+	<script src="https://pod-o-mart.github.io/js/template.js" type="text/javascript"></script>
+	<style>
+	.module-content li {
+	font-variant: normal;
+	color: #fff !important;
+	text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
+	font-weight: bold;
+	margin: 0;
+	border-top: 1px solid transparent;
+	border-bottom: 1px solid transparent;
+	}
+	table, tr, td {
 	border:0;
-}
-table {
-	width:100%;
-}
-#forkme_banner {
-display: block;
-position: absolute;
-top: 0;
-right: 10px;
-z-index: 10;
-padding: 10px 50px 10px 10px;
-color: #fff;
-background: url("https://pages-themes.github.io/slate/assets/images/blacktocat.png") #0090ff no-repeat 95% 50%;
-font-weight: 700;
-box-shadow: 0 0 10px rgba(0,0,0,0.5);
-border-bottom-left-radius: 2px;
-border-bottom-right-radius: 2px;
-}
-</style>
+	}
+	#forkme_banner {
+	display: block;
+	position: absolute;
+	top: 0;
+	right: 10px;
+	z-index: 10;
+	padding: 10px 50px 10px 10px;
+	color: #fff;
+	background: url("https://pages-themes.github.io/slate/assets/images/blacktocat.png") #0090ff no-repeat 95% 50%;
+	font-weight: 700;
+	box-shadow: 0 0 10px rgba(0,0,0,0.5);
+	border-bottom-left-radius: 2px;
+	border-bottom-right-radius: 2px;
+	}
+	a#forkme_banner:hover {
+	color: #fff !important;
+	text-decoration:underline;
+	}
+	#main {
+	margin:auto 10px 10px 10px;
+	}
+	#sidebar {
+	padding-left:0;
+	}
+	</style>
 </head>
+
 <body>
+<div id="wrap">
+<!--Navigation-->
+	<header id="header" class="header header--fixed hide-from-print" >
+<!--top-->
+		<div id="top" class="navbar-inverse">
+			<div class="container">
+				<div class="row">
+					<div class="custom site-title">
+						<p>Martin Podolak</p>
+					</div>
+				</div>
+			</div>
+		</div>
+<!--top-->
+		<div id="navigation">
+			<div class="navbar navbar-default">
+				<div class="container">
+					<div class="navbar-header">
+					</div>
+					<div class="navbar-collapse">
+						<nav class="navigation">
+							<ul class="nav menu navbar-nav pull-left toplist hidden-xs">
+								<li><a href="https://pod-o-mart.github.io" >Home</a></li>
+							</ul>
+						</nav>
+					</div>
+				</div>
+			</div>
+		</div>
+	</header>
+	<div class="clearfix"></div>
+	<section>
+		<div class="container">
+			<div id="main" class="row show-grid">
+				<div id="sidebar" class="col-xs-12 col-sm-3 col-md-3 col-lg-2">
+					<div class="block  _menu2">
+						<div class="moduletable">           	
+							<div class="module-title">
+								<h3 class="title"><span class="" ></span>Similar projects</h3>
+							</div>
+							<div class="module-content">
+								<ul class="nav menu panel-group">
+									<li class="panel panel-default"><a href="https://pod-o-mart.github.io/keyboardBookmarklets/">Bookmarklets for a multilingual virtual online keyboard</a></li>
+									<li class="panel panel-default"><a href="https://pod-o-mart.github.io/dictionaryBookmarklets/">Dictionary Bookmarklets</a></li>
+									<li class="panel panel-default"><a href="https://pod-o-mart.github.io/yiddishBookmarklets/">Bookmarklet for Yiddish dictionaries, keyboard input and transliteration</a></li>
+								</ul>
+							</div>
+						</div>             	
+					</div>
+				</div>
+<!-- Main content -->				
 
 <div style="font-family:sans-serif;">
 <a id="forkme_banner" href="https://github.com/pod-o-mart/slavonicBookmarklets">View on GitHub</a>
 <h1>Bookmarklets for Slavonic Studies</h1>
-<div style="float:right;margin:5px;border:2px solid black;max-width:33%;">
-<h2 style="text-align:center;margin:3px;">Similar projects</h2>
-<ul style="margin:5px;">
-	<li><a href="https://pod-o-mart.github.io/dictionaryBookmarklets/">Dictionary Bookmarklets</a></li>
-	<li><a href="https://pod-o-mart.github.io/keyboardBookmarklets/">Bookmarklets for a multilingual virtual online keyboard</a></li>
-	<li><a href="https://pod-o-mart.github.io/yiddishBookmarklets/">Bookmarklet for Yiddish dictionaries, keyboard input and transliteration</a></li>
-</ul>
-</div>
 <p style="text-align: justify;">To use the bookmarklets, you'll have to drag the button into your bookmarks toolbar. A <i>right-click</i> → <i>"save as bookmark"</i> would also make it. Important is that it will be saved as a bookmark.</p>
 <p style="text-align: justify;">The bookmarklets work virtually with any browser on almost any web site <u>except on Facebook</u>.</p>
 <p style="text-align: justify;">Read more about <a href="http://bookmarklets.org/what-is-a-bookmarklet/" target="_blank" rel="noopener noreferrer">what bookmarklets are</a>.</p>
@@ -82,7 +157,7 @@ border-bottom-right-radius: 2px;
 		<tr style="height:30px;">
 			<td style="width:20%;">
 				<div style="white-space: nowrap;">
-					<a href="javascript:(function(d){var%20scriptlang=document.createElement('script');scriptlang.type='text/javascript';scriptlang.text='var%20kblang=\'Русский\'';document.getElementsByTagName('head')[0].appendChild(scriptlang);var%20s=d.createElement('script');s.type='text/javascript';s.charset='utf-8';s.async=true;s.src='https://pod-o-mart.github.io/keyboardBookmarklets/kb-slav.js';d.body.appendChild(s);var%20head=document.head;var%20link=document.createElement('link');link.type='text/css';link.rel='stylesheet';link.href='https://pod-o-mart.github.io/keyboardBookmarklets/keyboard.css';head.appendChild(link);var%20y=document.getElementsByTagName('TEXTAREA');var%20j;for(j=0;j<y.length;j++){y[j].classList.add('keyboardInput');}var%20x=document.querySelectorAll('INPUT');var%20i;for(i=0;i<x.length;i++){x[i].classList.add('keyboardInput');}var%20w=document.getElementsByTagName('INPUT');var%20l;for(l=0;l<w.length;l++){if(w[l].getAttribute('type')==='email'){w[l].setAttribute('type','text');}if(w[l].getAttribute('type')==='search'){w[l].setAttribute('type','text');}}}(document));" onclick="alert('Drag the link into your browser\'s bookmarks toolbar or save it as a bookmark.');return false;" style="border: 1px solid #afafaf; padding: 5px; margin: 5px; background-color: #eeeeee;">Keyboard<img src="https://pod-o-mart.github.io/keyboardBookmarklets/keyboard.png" border="0" style="margin-left: 5px;" /></a>
+					<a href="javascript:(function(d){var%20scriptlang=document.createElement('script');scriptlang.type='text/javascript';scriptlang.text='var%20kblang=\'Русский\'';document.getElementsByTagName('head')[0].appendChild(scriptlang);var%20s=d.createElement('script');s.type='text/javascript';s.charset='utf-8';s.async=true;s.src='https://pod-o-mart.github.io/keyboardBookmarklets/kb-slav.js';d.body.appendChild(s);var%20head=document.head;var%20link=document.createElement('link');link.type='text/css';link.rel='stylesheet';link.href='https://pod-o-mart.github.io/keyboardBookmarklets/keyboard.css';head.appendChild(link);var%20y=document.getElementsByTagName('TEXTAREA');var%20j;for(j=0;j<y.length;j++){y[j].classList.add('keyboardInput');}var%20x=document.querySelectorAll('INPUT');var%20i;for(i=0;i<x.length;i++){x[i].classList.add('keyboardInput');}var%20w=document.getElementsByTagName('INPUT');var%20l;for(l=0;l<w.length;l++){if(w[l].getAttribute('type')==='email'){w[l].setAttribute('type','text');}if(w[l].getAttribute('type')==='search'){w[l].setAttribute('type','text');}}}(document));" onclick="alert('Drag the link into your browser\'s bookmarks toolbar or save it as a bookmark.');return false;" style="border: 1px solid #afafaf; padding: 5px; margin: 5px; background-color: #eeeeee;">Keyboard<img src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAABwAAAANAgMAAADH6eY5AAAADFBMVEUAAADAwMD///+AgID8PoY4AAAAUElEQVR4Xk3KsQ2AIBCF4TcEbHCVe1hoZ3IsZhyBRqdgCNzAwrgEHncGfHnVnw/FhmudSI68jE6OBNujecOpmVu/q5/j5/nnh2OnKN6H0P0LmzYfoht62vIAAAAASUVORK5CYII=" border="0" style="margin-left: 5px;" /></a>
 				</div>
 			</td>
 			<td>
@@ -95,7 +170,7 @@ border-bottom-right-radius: 2px;
 		<tr style="height:30px;">
 			<td style="width:20%;">
 				<div style="white-space: nowrap;">
-					<a href="javascript:(function(d){var%20scriptlang=document.createElement('script');scriptlang.type='text/javascript';scriptlang.text='var%20kblang=\'Русский\'';document.getElementsByTagName('head')[0].appendChild(scriptlang);var%20s=d.createElement('script');s.type='text/javascript';s.charset='utf-8';s.async=true;s.src='https://pod-o-mart.github.io/keyboardBookmarklets/keyboard-ees.js';d.body.appendChild(s);var%20head=document.head;var%20link=document.createElement('link');link.type='text/css';link.rel='stylesheet';link.href='https://pod-o-mart.github.io/keyboardBookmarklets/keyboard.css';head.appendChild(link);var%20y=document.getElementsByTagName('TEXTAREA');var%20j;for(j=0;j<y.length;j++){y[j].classList.add('keyboardInput');}var%20x=document.querySelectorAll('INPUT');var%20i;for(i=0;i<x.length;i++){x[i].classList.add('keyboardInput');}var%20w=document.getElementsByTagName('INPUT');var%20l;for(l=0;l<w.length;l++){if(w[l].getAttribute('type')==='email'){w[l].setAttribute('type','text');}if(w[l].getAttribute('type')==='search'){w[l].setAttribute('type','text');}}}(document));" onclick="alert('Drag the link into your browser\'s bookmarks toolbar or save it as a bookmark.');return false;" style="border: 1px solid #afafaf; padding: 5px; margin: 5px; background-color: #eeeeee;">Keyboard<img src="https://pod-o-mart.github.io/keyboardBookmarklets/keyboard.png" border="0" style="margin-left: 5px;" /></a>
+					<a href="javascript:(function(d){var%20scriptlang=document.createElement('script');scriptlang.type='text/javascript';scriptlang.text='var%20kblang=\'Русский\'';document.getElementsByTagName('head')[0].appendChild(scriptlang);var%20s=d.createElement('script');s.type='text/javascript';s.charset='utf-8';s.async=true;s.src='https://pod-o-mart.github.io/keyboardBookmarklets/keyboard-ees.js';d.body.appendChild(s);var%20head=document.head;var%20link=document.createElement('link');link.type='text/css';link.rel='stylesheet';link.href='https://pod-o-mart.github.io/keyboardBookmarklets/keyboard.css';head.appendChild(link);var%20y=document.getElementsByTagName('TEXTAREA');var%20j;for(j=0;j<y.length;j++){y[j].classList.add('keyboardInput');}var%20x=document.querySelectorAll('INPUT');var%20i;for(i=0;i<x.length;i++){x[i].classList.add('keyboardInput');}var%20w=document.getElementsByTagName('INPUT');var%20l;for(l=0;l<w.length;l++){if(w[l].getAttribute('type')==='email'){w[l].setAttribute('type','text');}if(w[l].getAttribute('type')==='search'){w[l].setAttribute('type','text');}}}(document));" onclick="alert('Drag the link into your browser\'s bookmarks toolbar or save it as a bookmark.');return false;" style="border: 1px solid #afafaf; padding: 5px; margin: 5px; background-color: #eeeeee;">Keyboard<img src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAABwAAAANAgMAAADH6eY5AAAADFBMVEUAAADAwMD///+AgID8PoY4AAAAUElEQVR4Xk3KsQ2AIBCF4TcEbHCVe1hoZ3IsZhyBRqdgCNzAwrgEHncGfHnVnw/FhmudSI68jE6OBNujecOpmVu/q5/j5/nnh2OnKN6H0P0LmzYfoht62vIAAAAASUVORK5CYII=" border="0" style="margin-left: 5px;" /></a>
 				</div>
 			</td>
 			<td>
@@ -122,8 +197,13 @@ border-bottom-right-radius: 2px;
 <p style="text-align: justify;"><a href="javascript:function%20addCSS%28e%29%7Bvar%20t%3Ddocument.getElementsByTagName%28%22head%22%29%5B0%5D%2Ca%3Ddocument.createElement%28%22link%22%29%3Ba.href%3De%2Ca.rel%3D%22stylesheet%22%2Ct.append%28a%29%7DaddCSS%28%22https%3A%2F%2Fsci.ponomar.net%2Fcss%2Ffonts.css%22%29%3Bvar%20a%3Ddocument.getElementsByTagName%28%22%2A%22%29%3Bfor%28i%3D0%3Bi%3Ca.length%3Bi%2B%2B%29a%5Bi%5D.style.setProperty%28%22font-family%22%2C%27%22FiraSlav%22%27%2C%22important%22%29%3B" onclick="alert('Drag the browser button link into the bookmarks toolbar or save the link as a bookmark.');return false;" style="border: 1px solid #afafaf; padding: 5px; margin: 5px; background-color: #eeeeee;">OCS font dev</a>&nbsp;<strong>Converts the current website on click for display with "FiraSlav"</strong>, a monospaced OCS font for developers. All diacritical marks and combining letters are presented as spacing symbols and a monospaced appearance is maintained.</p>
 <p style="text-align: justify;"><a href="javascript:function%20addCSS%28e%29%7Bvar%20t%3Ddocument.getElementsByTagName%28%22head%22%29%5B0%5D%2Ca%3Ddocument.createElement%28%22link%22%29%3Ba.href%3De%2Ca.rel%3D%22stylesheet%22%2Ct.append%28a%29%7DaddCSS%28%22https%3A%2F%2Fsci.ponomar.net%2Fcss%2Ffonts.css%22%29%3Bvar%20a%3Ddocument.getElementsByTagName%28%22%2A%22%29%3Bfor%28i%3D0%3Bi%3Ca.length%3Bi%2B%2B%29a%5Bi%5D.style.setProperty%28%22font-family%22%2C%27%22FiraSlav%22%27%2C%22important%22%29%3B">DEMO</a>:</p>
 <p class="ksl" style="border: 1px solid #C4C1BD; background-color:#E5E3E1; margin 5px 0;padding: 5px 0 5px 5px;width: max-content;">Ѹ҆зрѣ́въ же наро́ды, взы́де на горꙋ̀: и҆ сѣ́дшꙋ є҆мꙋ̀, пристꙋпи́ша къ немꙋ̀ ѹ҆чн҃цы̀ є҆гѡ̀.</p>
-<p style="text-align:right;">Author: <a href="https://podolak.net" target="_blank">Martin Podolak</a></p>
 <br />
+</div>
+<!-- Main content -->
+			</div>
+		</div>
+		<a href="#" class="back-to-top">Back to top</a>  <!-- Anpassungen -->
+	</section>
 </div>
 </body>
 </html>
