--- a/index.html
+++ b/index.html
@@ -132,7 +132,28 @@
 	<tbody>
 		<tr style="height:30px;">
 			<td style="width:20%;"><a href="javascript:var%20t=window.getSelection?window.getSelection():document.getSelection?document.getSelection():(document.selection&&document.selection.createRange)?document.selection.createRange().text:'';if(t!='');(function(d){var%20s=d.createElement('script');s.type='text/javascript';s.charset='utf-8';s.async=true;s.src='https://pod-o-mart.github.io/dictionaryBookmarklets/ocs.js';d.body.appendChild(s);}(document));" onclick="alert('Drag the browser button link into the bookmarks toolbar or save the link as a bookmark.');return false;" style="border: 1px solid #afafaf; padding: 5px; margin: 5px; background-color: #eeeeee;">OCS dicts</a></td>
-			<td><strong>Old Church Slavonic</strong> dictionaries, corpora, Cyrillic input and transliteration. This bookmarklet supports research in Slavonic historical linguistics with focus on Old Church Slavonic and Old Russian. It offers a selection of lexical and grammatical dictionaries, corpora, a transliteration function and a virtual keyboard for historical Cyrillic characters.</td>
+			<td><strong>Old Church Slavonic</strong> dictionaries, corpora, Cyrillic input, transliteration and font operations. This bookmarklet supports your research in Slavonic historical linguistics with focus on Old Church Slavonic and Old Russian. <br/>The bookmarklet provides two modes - the <em>dictionary mode</em> and the <em>notepad mode</em> which can be toggled in the top of the window.<br />
+<ul>
+<li><strong>Dictionary mode</strong>
+	<ul>
+		<li>Lookup lexical/grammatical dictionaries and corpora</li>
+		<li>Convert between a selection of official transliteration styles</li>
+		<li>Convert Old Church Slavonic numerals</li>
+		<li>Use the virtual keyboard <img src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAABwAAAANAgMAAADH6eY5AAAADFBMVEUAAADAwMD///+AgID8PoY4AAAAUElEQVR4Xk3KsQ2AIBCF4TcEbHCVe1hoZ3IsZhyBRqdgCNzAwrgEHncGfHnVnw/FhmudSI68jE6OBNujecOpmVu/q5/j5/nnh2OnKN6H0P0LmzYfoht62vIAAAAASUVORK5CYII=" border="0"> in the search input field. It supports all major Slavic languages, Old Church Slavonic ("Словѣньскъ") and Glagolitic ("Ⰳⰾⰰⰳⱁⰾⰹⱌⰰ"). The keyboard function is also available as standalone, see below "Virtual Keyboard Interfaces"</li>
+		<li>The word or the text which has been marked with the mouse before activating the bookmarklet will be displayed in the search input field</li>
+		<li>Text strings from the search input field will be appended to the text in the notepad by clicking "copy to notepad"</li>
+	</ul>
+</li>
+<li><strong>Notepad mode</strong>
+	<ul>
+		<li>Use the virtual keyboard <img src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAABwAAAANAgMAAADH6eY5AAAADFBMVEUAAADAwMD///+AgID8PoY4AAAAUElEQVR4Xk3KsQ2AIBCF4TcEbHCVe1hoZ3IsZhyBRqdgCNzAwrgEHncGfHnVnw/FhmudSI68jE6OBNujecOpmVu/q5/j5/nnh2OnKN6H0P0LmzYfoht62vIAAAAASUVORK5CYII=" border="0"> also for the notepad</li>
+		<li>Switch between fonts: Old Cyrillic <em>ustav</em> (Monomakh), <em>monospaced</em> for technical work (FiraSlav), <em>sans-serif</em> with wide support of Cyrillic characters (Arimo) and your system's <em>serif</em> font </li>
+		<li>Manipulate the text by exporting text strings from the dictionary search field</li>
+		<li>Change the font display of the current web site to Old Cyrillic (ustav) with <em>Monomakh2website</em> or to a developer's font with <em>FiraSlav2website</em>. These two functions are also available as standalones, see below</li>
+	</ul>
+</li>
+</ul>
+</td>
 			<td><a href="javascript:var%20t=window.getSelection?window.getSelection():document.getSelection?document.getSelection():(document.selection&&document.selection.createRange)?document.selection.createRange().text:'';if(t!='');(function(d){var%20s=d.createElement('script');s.type='text/javascript';s.charset='utf-8';s.async=true;s.src='https://pod-o-mart.github.io/dictionaryBookmarklets/ocs.js';d.body.appendChild(s);}(document));">DEMO</a></td>
 		</tr>
 		<tr style="height:30px;">
